--- a/index.html
+++ b/index.html
@@ -1,126 +1,95 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <title>Ohmyfood</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="sass/index.css" />
-    <script
-      src="https://kit.fontawesome.com/3f75339eca.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
 
-  <body>
-    <div class="loader">
-      <img
-        class="logo"
-        src="assets/images/logo/ohmyfood@2x.svg"
-        alt="Logo Ohmyfood"
-      />
-      <div class="table2">
-        <img
-          class="fork"
-          src="assets/images/loader/fork.png"
-          alt="fourchette"
-        />
-        <div class="plate">
-          <div class="circle"></div>
-          <div class="round"></div>
-        </div>
-        <img class="knife" src="assets/images/loader/knife.png" alt="couteau" />
+<head>
+  <meta charset="utf-8" />
+  <title>Ohmyfood</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="sass/index.css" />
+  <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="loader">
+    <img class="logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+    <div class="table2">
+      <img class="fork" src="assets/images/loader/fork.png" alt="fourchette" />
+      <div class="plate">
+        <div class="circle"></div>
+        <div class="round"></div>
       </div>
+      <img class="knife" src="assets/images/loader/knife.png" alt="couteau" />
     </div>
-    <header>
-      <img
-        class="header__logo"
-        src="assets/images/logo/ohmyfood@2x.svg"
-        alt="Logo Ohmyfood"
-      />
-      <div class="header__location">
-        <i class="fa-solid fa-location-dot"></i>
-        <input
-          type="text"
-          name="location"
-          id="city"
-          placeholder="Paris, Belleville"
-        />
-      </div>
-    </header>
-    <main class="main__container">
-      <section class="section__bgd">
-        <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-        <a href="#restaurants" class="button__gradient"
-          >Explorer nos restaurants</a
-        >
-      </section>
-      <section>
-        <h1>Fonctionnement</h1>
-        <div class="howto">
-          <div class="howto__card">
-            <p class="howto__card-number">1</p>
-            <div>
-              <p><i class="fa-solid fa-mobile-screen-button"></i></p>
-              <h4>Choisissez un restaurant</h4>
-            </div>
-          </div>
-          <div class="howto__card">
-            <p class="howto__card-number">2</p>
-            <div>
-              <p><i class="fa-solid fa-list-ul"></i></p>
-              <h4>Composez votre menu</h4>
-            </div>
-          </div>
-          <div class="howto__card">
-            <p class="howto__card-number">3</p>
-            <div>
-              <p><i class="fa-solid fa-store"></i></p>
-              <h4>Dégustez au restaurant</h4>
-            </div>
+  </div>
+  <header>
+    <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+    <div class="header__location">
+      <i class="fa-solid fa-location-dot"></i>
+      <input type="text" name="location" id="city" placeholder="Paris, Belleville" />
+    </div>
+  </header>
+  <main class="main__container">
+    <section class="section__bgd">
+      <h1>Réservez le menu qui vous convient</h1>
+      <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+      <a href="#restaurants" class="button__gradient">Explorer nos restaurants</a>
+    </section>
+    <section>
+      <h1>Fonctionnement</h1>
+      <div class="howto">
+        <div class="howto__card">
+          <p class="howto__card-number">1</p>
+          <div>
+            <p><i class="fa-solid fa-mobile-screen-button"></i></p>
+            <h4>Choisissez un restaurant</h4>
           </div>
         </div>
-      </section>
-      <section id="restaurants" class="section__bgd">
-        <h1>Restaurants</h1>
-        <div class="restaurant__list">
+        <div class="howto__card">
+          <p class="howto__card-number">2</p>
+          <div>
+            <p><i class="fa-solid fa-list-ul"></i></p>
+            <h4>Composez votre menu</h4>
+          </div>
+        </div>
+        <div class="howto__card">
+          <p class="howto__card-number">3</p>
+          <div>
+            <p><i class="fa-solid fa-store"></i></p>
+            <h4>Dégustez au restaurant</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="restaurants" class="section__bgd">
+      <h1>Restaurants</h1>
+      <div class="restaurant__list">
+        <div class="card__container">
           <a href="restaurants/menu_palette_du_gout.html">
             <article class="restaurant__card">
               <div class="restaurant__photo">
-                <img
-                  src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                  alt="Une table à La palette du goût"
-                  title="Une table à La palette du goût"
-                />
+                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="Une table à La palette du goût" title="Une table à La palette du goût" />
                 <div class="button__new">Nouveau</div>
               </div>
               <div class="restaurant__card-content">
-                <div>
-                  <h3>La palette du goût</h3>
-                  <p>Ménilmontant</p>
-                </div>
-                <div class="restaurant__rate">
-                  <span
-                    ><i class="fa-regular fa-heart"></i
-                    ><i class="fa-solid fa-heart"></i
-                  ></span>
-                </div>
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
               </div>
             </article>
           </a>
+          <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i></button>
+        </div>
+        <div class="card__container">
+
           <a href="restaurants/menu_note_enchantee.html">
             <article class="restaurant__card">
               <div class="restaurant__photo">
-                <img
-                  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                  alt="Une table à La note enchantée"
-                  title="Une table à La note enchantée"
-                />
+                <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Une table à La note enchantée"
+                  title="Une table à La note enchantée" />
                 <div class="button__new">Nouveau</div>
               </div>
               <div class="restaurant__card-content">
@@ -128,79 +97,61 @@
                   <h3>La note enchantée</h3>
                   <p>Charonne</p>
                 </div>
-                <div class="restaurant__rate">
-                  <span
-                    ><i class="fa-regular fa-heart"></i
-                    >
-                    <i class="fa-solid fa-heart"></i
-                  ></span>
-                </div>
-              </div>
             </article>
           </a>
+          <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i></button>
+        </div>
+        <div class="card__container">
+
           <a href="restaurants/menu_la_francaise.html">
             <article class="restaurant__card">
               <div class="restaurant__photo">
-                <img
-                  src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                  alt="Une table à la Française"
-                  title="Une table à la Française"
-                />
+                <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Une table à la Française"
+                  title="Une table à la Française" />
               </div>
               <div class="restaurant__card-content">
                 <div>
                   <h3>A la Française</h3>
                   <p>Cité Rouge</p>
                 </div>
-                <div class="restaurant__rate">
-                  <span
-                    ><i class="fa-regular fa-heart"></i
-                    ><i class="fa-solid fa-heart"></i
-                  ></span>
-                </div>
-              </div>
             </article>
           </a>
+          <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i></button>
+        </div>
+        <div class="card__container">
+
           <a href="restaurants/menu_delice_des_sens.html">
             <article class="restaurant__card">
               <div class="restaurant__photo">
-                <img
-                  src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                  alt="Une table au délice des sens"
-                  title="Une table au délice des sens"
-                />
+                <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="Une table au délice des sens" title="Une table au délice des sens" />
               </div>
               <div class="restaurant__card-content">
                 <div>
                   <h3>Le délice des sens</h3>
                   <p>Folie-Méricourt</p>
                 </div>
-                <div class="restaurant__rate">
-                  <span
-                    ><i class="fa-regular fa-heart"></i
-                    ><i class="fa-solid fa-heart"></i
-                  ></span>
-                </div>
-              </div>
             </article>
           </a>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div class="info">
-        <h1>ohmyfood</h1>
-        <div class="info__contact">
-          <a href="#"
-            ><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a
-          >
-          <a href="#"
-            ><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a
-          >
-          <a href="#">Mentions légales</a>
-          <a href="mailto:#">Contact</a>
+          <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i></button>
         </div>
       </div>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer>
+    <div class="info">
+      <h1>ohmyfood</h1>
+      <div class="info__contact">
+        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a>
+        <a href="#">Mentions légales</a>
+        <a href="mailto:#">Contact</a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
