--- a/restaurants/menu_la_francaise.html
+++ b/restaurants/menu_la_francaise.html
@@ -1,187 +1,173 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <title>Ohmyfood - A la Française</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../sass/index.css" />
-    <script
-      src="https://kit.fontawesome.com/3f75339eca.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header class="header">
-      <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-      <img
-        class="header__logo"
-        src="../assets/images/logo/ohmyfood@2x.svg"
-        alt="Logo Ohmyfood"
-      />
-    </header>
-    <main class="restaurant">
-      <div class="restaurant__photo">
-        <img
-          src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-          alt="Une assiette à la Francçaise"
-          title="Une assiette à la Francçaise"
-        />
+
+<head>
+  <meta charset="utf-8" />
+  <title>Ohmyfood - A la Française</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="../sass/index.css" />
+  <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header class="header">
+    <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+  </header>
+  <main class="restaurant">
+    <div class="restaurant__photo">
+      <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Une assiette à la Francçaise"
+        title="Une assiette à la Francçaise" />
+    </div>
+    <div class="restaurant__menu">
+      <div class="restaurant__info">
+        <h1>A la Française</h1>
+        <div class="restaurant__rate">
+          <span>
+            <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
+          </span>
+        </div>
       </div>
-      <div class="restaurant__menu">
-        <div class="restaurant__info">
-          <h1>A la Française</h1>
-          <div class="restaurant__rate">
-            <span>
-              <i class="fa-regular fa-heart"></i
-              ><i class="fa-solid fa-heart"></i>
-            </span>
+      <div class="menu__container">
+        <div class="recipes">
+          <h2>Entrées</h2>
+          <div class="recipes__stylebar"></div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Tartare de poulpe acidulé</h3>
+                <p>Aux zestes d'orange</p>
+              </div>
+              <div class="recipes__price">25€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Velouté de légumes d'antan</h3>
+                <p>Carotte, panais, topinambour</p>
+              </div>
+              <div class="recipes__price">35€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Soupe à l'oignon</h3>
+                <p>Revisitée</p>
+              </div>
+              <div class="recipes__price">20€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
           </div>
         </div>
-          <div class="menu__container">
-              <div class="recipes">
-                <h2>Entrées</h2>
-                <div class="recipes__stylebar"></div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Tartare de poulpe acidulé</h3>
-                      <p>Aux zestes d'orange</p>
-                    </div>
-                    <div class="recipes__price">25€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Velouté de légumes d'antan</h3>
-                      <p>Carotte, panais, topinambour</p>
-                    </div>
-                    <div class="recipes__price">35€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Soupe à l'oignon</h3>
-                      <p>Revisitée</p>
-                    </div>
-                    <div class="recipes__price">20€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
+        <div class="recipes">
+          <h2>Plats</h2>
+          <div class="recipes__stylebar"></div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Coquilles Saint-Jacques</h3>
+                <p>Accompagnées d'une purée de panais</p>
               </div>
-              <div class="recipes">
-                <h2>Plats</h2>
-                <div class="recipes__stylebar"></div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Coquilles Saint-Jacques</h3>
-                      <p>Accompagnées d'une purée de panais</p>
-                    </div>
-                    <div class="recipes__price">40€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Magret de canard</h3>
-                      <p>Et parmentier de pommes de terre</p>
-                    </div>
-                    <div class="recipes__price">35€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                      <p>Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <div class="recipes__price">44€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
+              <div class="recipes__price">40€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
               </div>
-              <div class="recipes">
-                <h2>Desserts</h2>
-                <div class="recipes__stylebar"></div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Pétales de violettes glacés</h3>
-                      <p>Et purée de noisettes</p>
-                    </div>
-                    <div class="recipes__price">18€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Fondant au chocolat</h3>
-                      <p>Revisité</p>
-                    </div>
-                    <div class="recipes__price">22€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Millefeuille croustillant</h3>
-                      <p>Myrtilles et pâte d’amande</p>
-                    </div>
-                    <div class="recipes__price">23€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-circle-check"></i></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            </div>
           </div>
-        <a href="#"><button class="button__gradient">Commander</button></a>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Magret de canard</h3>
+                <p>Et parmentier de pommes de terre</p>
+              </div>
+              <div class="recipes__price">35€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                <p>Sur son lit de gnocchis aux légumes</p>
+              </div>
+              <div class="recipes__price">44€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="recipes">
+          <h2>Desserts</h2>
+          <div class="recipes__stylebar"></div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Pétales de violettes glacés</h3>
+                <p>Et purée de noisettes</p>
+              </div>
+              <div class="recipes__price">18€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Fondant au chocolat</h3>
+                <p>Revisité</p>
+              </div>
+              <div class="recipes__price">22€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Millefeuille croustillant</h3>
+                <p>Myrtilles et pâte d’amande</p>
+              </div>
+              <div class="recipes__price">23€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </main>
-    <footer>
-      <div class="info">
-        <h1>ohmyfood</h1>
-        <div class="info__contact">
-          <a href="#"
-            ><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a
-          >
-          <a href="#"
-            ><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a
-          >
-          <a href="#">Mentions légales</a>
-          <a href="mailto:#">Contact</a>
-        </div>
+      <a href="#"><button class="button__gradient">Commander</button></a>
+    </div>
+    </div>
+  </main>
+  <footer>
+    <div class="info">
+      <h1>ohmyfood</h1>
+      <div class="info__contact">
+        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a>
+        <a href="#">Mentions légales</a>
+        <a href="mailto:#">Contact</a>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
