--- a/restaurants/menu_note_enchantee.html
+++ b/restaurants/menu_note_enchantee.html
@@ -1,199 +1,185 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <title>Ohmyfood - La note enchantée</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../sass/index.css" />
-    <script
-      src="https://kit.fontawesome.com/3f75339eca.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header class="header">
-      <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-      <img
-        class="header__logo"
-        src="../assets/images/logo/ohmyfood@2x.svg"
-        alt="Logo Ohmyfood"
-      />
-    </header>
-    <main class="restaurant">
-      <div class="restaurant__photo">
-        <img
-          src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-          alt="Une assiette à La note enchantée"
-          title="Une assiette à La note enchantée"
-        />
-      </div>
-      <div class="restaurant__menu">
-        <div class="restaurant__info">
-          <h1>La note enchantée</h1>
-          <div class="restaurant__rate">
-            <span>
-              <i class="fa-regular fa-heart"></i
-              ><i class="fa-solid fa-heart"></i>
-            </span>
-          </div>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Ohmyfood - La note enchantée</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="../sass/index.css" />
+  <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header class="header">
+    <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" />
+  </header>
+  <main class="restaurant">
+    <div class="restaurant__photo">
+      <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Une assiette à La note enchantée"
+        title="Une assiette à La note enchantée" />
+    </div>
+    <div class="restaurant__menu">
+      <div class="restaurant__info">
+        <h1>La note enchantée</h1>
+        <div class="restaurant__rate">
+          <span>
+            <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
+          </span>
         </div>
-        <div class="menu__container">
-            <div class="recipes">
-              <h2>Entrées</h2>
-              <div class="recipes__stylebar"></div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Ravioles de foie gras</h3>
-                    <p>Accompagnées de leur crème à la truffe</p>
-                  </div>
-                  <div class="recipes__price">25€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
+      </div>
+      <div class="menu__container">
+        <div class="recipes">
+          <h2>Entrées</h2>
+          <div class="recipes__stylebar"></div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Ravioles de foie gras</h3>
+                <p>Accompagnées de leur crème à la truffe</p>
               </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Caviar osciètre</h3>
-                    <p>Sur blini à la farine de blé noir</p>
-                  </div>
-                  <div class="recipes__price">35€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Homard et espuma de potiron</h3>
-                    <p>Marinés aux zestes d'orange</p>
-                  </div>
-                  <div class="recipes__price">20€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Foie gras de canard cuit entier</h3>
-                    <p>Confiture de figue et pain toasté</p>
-                  </div>
-                  <div class="recipes__price">35€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="recipes">
-              <h2>Plats</h2>
-              <div class="recipes__stylebar"></div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Noix de coquilles Saint-Jacques</h3>
-                    <p>Sur lit de purée de céleri-rave</p>
-                  </div>
-                  <div class="recipes__price">40€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Langoustine poêlée</h3>
-                    <p>Purée de patate douce</p>
-                  </div>
-                  <div class="recipes__price">35€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Mijoté de queue de bœuf</h3>
-                    <p>Et riz sauvage aux zestes de citron</p>
-                  </div>
-                  <div class="recipes__price">44€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="recipes">
-              <h2>Desserts</h2>
-              <div class="recipes__stylebar"></div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Macaron noisette et chocolat</h3>
-                    <p>Glace au caramel brun et sel de Guérande</p>
-                  </div>
-                  <div class="recipes__price">18€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Baba au rhum revisité</h3>
-                    <p>Avec son coulis de citron</p>
-                  </div>
-                  <div class="recipes__price">22€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Tarte au citron meringuée</h3>
-                    <p>Déstructurée</p>
-                  </div>
-                  <div class="recipes__price">23€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
+              <div class="recipes__price">25€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
               </div>
             </div>
           </div>
-        <a href="#"><button class="button__gradient">Commander</button></a>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Caviar osciètre</h3>
+                <p>Sur blini à la farine de blé noir</p>
+              </div>
+              <div class="recipes__price">35€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Homard et espuma de potiron</h3>
+                <p>Marinés aux zestes d'orange</p>
+              </div>
+              <div class="recipes__price">20€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Foie gras de canard cuit entier</h3>
+                <p>Confiture de figue et pain toasté</p>
+              </div>
+              <div class="recipes__price">35€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="recipes">
+          <h2>Plats</h2>
+          <div class="recipes__stylebar"></div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Noix de coquilles Saint-Jacques</h3>
+                <p>Sur lit de purée de céleri-rave</p>
+              </div>
+              <div class="recipes__price">40€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Langoustine poêlée</h3>
+                <p>Purée de patate douce</p>
+              </div>
+              <div class="recipes__price">35€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Mijoté de queue de bœuf</h3>
+                <p>Et riz sauvage aux zestes de citron</p>
+              </div>
+              <div class="recipes__price">44€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="recipes">
+          <h2>Desserts</h2>
+          <div class="recipes__stylebar"></div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Macaron noisette et chocolat</h3>
+                <p>Glace au caramel brun et sel de Guérande</p>
+              </div>
+              <div class="recipes__price">18€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Baba au rhum revisité</h3>
+                <p>Avec son coulis de citron</p>
+              </div>
+              <div class="recipes__price">22€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Tarte au citron meringuée</h3>
+                <p>Déstructurée</p>
+              </div>
+              <div class="recipes__price">23€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </main>
-    <footer>
-      <div class="info">
-        <h1>ohmyfood</h1>
-        <div class="info__contact">
-          <a href="#"
-            ><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a
-          >
-          <a href="#"
-            ><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a
-          >
-          <a href="#">Mentions légales</a>
-          <a href="mailto:#">Contact</a>
-        </div>
+      <a href="#"><button class="button__gradient">Commander</button></a>
+    </div>
+    </div>
+  </main>
+  <footer>
+    <div class="info">
+      <h1>ohmyfood</h1>
+      <div class="info__contact">
+        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+        <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a>
+        <a href="#">Mentions légales</a>
+        <a href="mailto:#">Contact</a>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
